src/test/bad/casting4.jb
int main() {
	bool_to_string(1);
}
